--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -48,7 +48,7 @@
   
   /* Header Brand/Logo */
   .home-header-nav-brand {
-    grid-row: 1 / span 2;
+    grid-row: 1 / span 4;
     display: flex;
     align-items: center;
     padding-right: 0.5rem;
@@ -58,12 +58,14 @@
     display: flex;
     align-items: center;
     height: 100%;
+  
   }
   
   .home-header-nav-logo-img {
     height: 60px;
-    width: auto;
+    width: 100px;
     transition: var(--transition);
+    aspect-ratio: 1;
   }
   
   /* Header Content Areas */
@@ -799,7 +801,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 50px;
+      height: 70px;
     }
   
     .home-header-nav-search-nav-item {
@@ -855,7 +857,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 45px;
+      height: 65px;
     }
    
     /* Mobile Search Styles */
@@ -910,7 +912,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 40px;
+      height: 55px;
     }
   
     .home-header-nav-bottom-actions {
@@ -982,7 +984,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 35px;
+      height: 55px;
     }
   
     .home-header-nav-bottom-actions {
@@ -1053,7 +1055,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 30px;
+      height: 40px;
     }
     .home-header-nav-sidebar-city-selector {
       display: flex;
