--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -42,7 +42,7 @@
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 0.2rem;
+    padding: 0 .8rem;
     gap: 0;
   }
   
@@ -260,8 +260,8 @@
     padding: 0.5rem;
     transition: var(--transition);
     color: var(--text-color);
-    width: 36px;
-    height: 36px;
+    width: 40px;
+    height: 40px;
     text-decoration: none;
   }
   
@@ -767,7 +767,7 @@
     }
     
     .home-header-nav-logo-img {
-      height: 55px;
+      height: 65px;
     }
   }
   
